# Log_Pulse

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/: architect.md  coder.md  reviewer.md  rules.md
.github/workflows/: ci.yml  codeql.yml  dependabot.yml
alerting/: slack.py
analyst/: Dockerfile  service.py
detection/: Dockerfile  README.md  rules.py  simulate_bruteforce.py
docs/: HLD.md  MILESTONE-1.md  NFRs.md  PRD.md  REVIEW-CHECKLIST.md
docs/ADRs/: ADR-000-template.md  ADR-001-warehouse.md  ADR-002-queue.md
ingestion/: Dockerfile  README.md  consumer.py  synthetic_producer.py
lake/raw/: auth_events_v1.ndjson
logpulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
observability/: README.md
scripts/: dev_bootstrap.ps1  dev_bootstrap.sh
serving/: Dockerfile  README.md  app.py
tests/: test_integration_e2e.py  test_rules.py
transform/: Dockerfile  README.md  run_dbt.py
transform/dbt/: .user.yml  dbt_project.yml  profiles.yml
transform/dbt/models/core/: alerts.sql  analyst_recommendations.sql
transform/dbt/models/staging/: schema.yml  stg_auth_events.sql
transform/dbt/seeds/: README.md
